# name: test_hapi_fhir_api_validate_error
  <class 'dict'> {
    'issue': <class 'list'> [
      <class 'dict'> {
        'code': '',
        'diagnostics': '500 internal server error',
        'severity': 'error',
      },
    ],
    'resourceType': 'OperationOutcome',
  }
---
# name: test_inmemory_fhir_api_validate
  <class 'dict'> {
    'issue': <class 'list'> [
    ],
    'resourceType': 'OperationOutcome',
    'text': <class 'dict'> {
      'div': '<p> it went fine bro </p>',
      'status': 'generated',
    },
  }
---
